# ComfyUI-SilentRain

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  __init__.py  debug_lora_shapes.py  pyproject.toml  rustc-ice-2026-02-03T01_47_43-1288997.txt  rustc-ice-2026-02-04T09_12_38-78405.txt  rustc-ice-2026-02-04T09_13_07-78467.txt  rustc-ice-2026-02-04T09_14_30-78577.txt  test_lora_application.py  test_lora_fix.py  test_lora_simple.py
apps/comfy_app/: Cargo.toml  README.md
apps/comfy_app/src/: _comfy_app.rs  app.rs  extension.rs  l_graph_node.rs  lib.rs  node.rs  node_data.rs  node_type.rs  widget.rs
apps/comfy_app/tests/: extension.rs
apps/llama-flow/: Cargo.toml  Makefile.toml  README.md
apps/llama-flow/examples/: check_gpu.rs  text_generation.rs  vision_concurrent_generation.rs  vision_generation.rs  vision_generation_stream.rs  vision_parallel_generation.rs
apps/llama-flow/src/: backend.rs  cache.rs  context.rs  error.rs  lib.rs  model.rs  request.rs  response.rs  sampler.rs  types.rs
apps/llama-flow/src/history/: manager.rs  mod.rs  session.rs
apps/llama-flow/src/hooks/: context.rs  mod.rs  registry.rs  traits.rs  types.rs
apps/llama-flow/src/hooks/builtin/: assemble_messages.rs  error_log.rs  load_history.rs  mod.rs  validate.rs
apps/llama-flow/src/pipeline/: pipeline_config.rs  pipeline_impl.rs
apps/server/: Cargo.toml  Untitled-1.groovy  build.rs  pyproject.toml
apps/server/examples/: QwenImageDiffusionBlockSwapPatch.py  qwen_image_block_swap.py  torch_demo.py
apps/server/examples/core/: always_equal_proxy.py  node.py  node_input_types_cls.py
apps/server/examples/wrapper/python/: py_isinstance.py
apps/server/resources/: README.md  kontext_bfl_presets_assistant.json
apps/server/resources/chat_template/: Qwen3_0.6B_Instruct.j2  README.md  llama-joycaption-beta-one-hf-llava-i1-GGUF.j2  llm_chat_template.json
apps/server/src/: asset.rs  error.rs  lib.rs
apps/server/src/conditioning/: conditioning_console_debug.rs  flux_kontext_inpainting_conditioning.rs  mod.rs
apps/server/src/core/: always_equal_proxy.rs  always_equal_proxy2.rs  category.rs  mod.rs  node.rs  node_base.rs
apps/server/src/core/utils/: bislerp.rs  common_upscale.rs  directory.rs  easing.rs  image.rs  lanczos.rs  lanczos2.rs  mod.rs
apps/server/src/image/: README_PRESET_RESOLUTION.md  _image_resize.rs  image_attachment_text.rs  image_custom_resolution.rs  image_grid_composite.rs  image_preset_resolution.rs  image_preset_resolution_v2.rs  image_resolution.rs  image_resolution2.rs  image_simple_resolution.rs  image_split_grid.rs  load_images_from_folder.rs  mod.rs  save_image_text.rs  save_images.rs
apps/server/src/joycaption/: joy_caption_extra_options.rs  joy_caption_ollama_prompter.rs  joycaption_beta_one_custom_gguf.rs  joycaption_beta_one_gguf.rs  joycaption_predictor.rs  mod.rs
apps/server/src/list/: any_dyn_list.rs  batch_to_list.rs  index_from_any_list.rs  list_bridge.rs  list_count.rs  list_to_batch.rs  merge_multi_list.rs  mod.rs  random_any_list.rs  shuffle_any_list.rs
apps/server/src/llama_cpp/: demo copy 2.rs  demo copy 3.rs  demo copy 4.rs  demo copy.rs  llama_cpp_base_context.rs  llama_cpp_chat.rs  llama_cpp_chat_v2.rs  llama_cpp_image_caption_v2.rs  llama_cpp_model_v2.rs  llama_cpp_mtmd_context.rs  llama_cpp_options.rs  llama_cpp_options_v2.rs  llama_cpp_pipeline.rs  llama_cpp_prompt_helper_v2.rs  llama_cpp_purge_vram.rs  llama_cpp_purge_vram_v2.rs  llama_cpp_vision.rs  llama_cpp_vision_v2.rs  llama_pipeline.rs  lllama_cpp_mtmd_context.rs  mod.rs  model_manager.rs
apps/server/src/logic/: batch_float.rs  is_empty.rs  is_empty_force_update.rs  mod.rs
apps/server/src/mask/: mask_grid_composite.rs  mask_split_grid.rs  mod.rs
apps/server/src/math/: float_constant.rs  float_to_int.rs  int_constant.rs  int_to_float.rs  mod.rs
apps/server/src/model/: SDXLsupported_models_base.py  _nunchaku_sdxl_unet_loader.rs  flux_block_swap_path.py  flux_block_swap_path.rs  mod.rs  nunchaku_sdxl_lora_loader.rs  nunchaku_sdxl_unet_loader.py  nunchaku_sdxl_unet_loader.rs  nunchaku_sdxl_unet_loader_fixed.py  nunchaku_sdxl_unet_loader_v2.rs  qwen_image_block_swap_path.py  qwen_image_block_swap_path.rs  teacache_qwen_image.rs
apps/server/src/model/configs/: sdxl-turbo-config.json
apps/server/src/model/py/: comfy_sdxl_unet_wrapper.py  comfy_sdxl_wrapper.py  flux_block_swap_path.py  nunchaku_sdxl_lora_converter.py  nunchaku_sdxl_lora_loader.py  nunchaku_sdxl_unet_loader.py  qwen_image_block_swap_path.py  sdxl.py  teacache_qwen_image.py
apps/server/src/text/: load_kontext_bfl_presets_assistant.rs  load_kontext_presets.rs  load_kontext_presets_assistant.rs  load_wan_presets.rs  mod.rs  regular_string.rs  remove_empty_lines.rs  save_text.rs  string_constant.rs  string_dyn_list.rs  string_dyn_list2.rs  string_list copy.rs  string_list.rs  string_list_to_sting.rs  text_box.rs  text_to_list.rs  wan22_official_prompt_selector.rs
apps/server/src/utils/: batch_rename.rs  bridge_anything.rs  console_debug.rs  file_scanner.rs  mod.rs  progress_bar_test.rs  template.rs  workflow_info.rs
apps/server/src/wrapper/: mod.rs
apps/server/src/wrapper/comfy/: file_list_cache.rs  folder_paths.rs  init_folder_paths.rs  mod.rs  node_helpers.rs  utils.rs  vae.rs
apps/server/src/wrapper/comfyui/: mod.rs  node_input.rs  prompt_server.rs  types.rs
apps/server/src/wrapper/python/: mod.rs  py_isinstance.rs
apps/server/src/wrapper/torch/: tensor.rs
apps/server/tests/: README.md  test_full_lora.py  test_lora_application.py  test_lora_conversion.py  test_lora_conversion_debug.py  test_lora_integration.py  test_lora_loading.py  test_lora_node.py  test_lora_workflow.py
apps/web/: Cargo.toml  README.md
apps/web/src/: any_dyn_list.rs  comfy_app.rs  lib.rs  string_dyn_list.rs  string_dyn_list2.rs  workflow_image.rs  workflow_image_export.rs
docs/: QA.md  (+11 more)
nodes/: .gitignore  README.md  __init__.py  pyproject.toml
nodes/comfyui_silentrain/: __init__.py
nodes/comfyui_silentrain-0.1.1.dist-info/: METADATA  RECORD  WHEEL
nodes/locales/zh/: nodeDefs.json
nodes/web/: main.js
(+226 files in other folders)
