[project]
name = "comfyui_silentrain"
description = "Ecological extension of comfyui using Rust language."
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# dynamic = ["version"]
version = "1.0.1"
dependencies = [
    "comfy-cli>=1.4.1",
    "numpy>=2.2.6",
    "torch>=2.7.1",
] # Filled in from requirements.txt


[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]


[project.urls]
Homepage = "https://github.com/silent-rain/ComfyUI-SilentRain"
Repository = "https://github.com/silent-rain/ComfyUI-SilentRain"
#  Used by Comfy Registry https://registry.comfy.org


[tool.comfy]
PublisherId = "silent-rain"
DisplayName = "ComfyUI-SilentRain"
Icon = ""
includes = []
