[project]
name = "ComfyUI-SilentRain"
description = "Ecological extension of comfyui using Rust language. only supports Linux."
version = "1.0.4"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.5.0",
] # Filled in from requirements.txt

[project.urls]
Homepage = "https://github.com/silent-rain/ComfyUI-SilentRain"
Repository = "https://github.com/silent-rain/ComfyUI-SilentRain"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "silent-rain"
DisplayName = "ComfyUI-SilentRain"
Icon = ""
includes = []
