[project]
name = "ComfyUI-SilentRain"
description = "Ecological extension of comfyui using Rust language. only supports Linux."
requires-python = ">=3.10"
version = "1.0.14"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.7.0",
] # Filled in from requirements.txt

[project.urls]
Homepage = "https://github.com/silent-rain/ComfyUI-SilentRain"
Repository = "https://github.com/silent-rain/ComfyUI-SilentRain"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "silent-rain"
DisplayName = "ComfyUI-SilentRain"
Icon = ""
includes = []


[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
#url = "https://download.pytorch.org/whl/cu126"
url = "https://mirrors.aliyun.com/pytorch-wheels/cu126"
explicit = true

[dependency-groups]
dev = ["pip>=25.0.1", "setuptools>=76.1.0"]

[tool.uv]
link-mode = "symlink"
