[package]
name = "web"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "CssStyleDeclaration",
] }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
crc32fast = { workspace = true }
futures = { workspace = true }

comfy_app = { path = "../comfy_app" }
